--- a/assignments/assignment4/README
+++ b/assignments/assignment4/README
@@ -1,1 +1,3 @@
 
+Use scikit learn to be able to determine if a mushroom in the mushroom database is edible or not based on its features that we know.
+I used a decision tree classifier to train the data.
